[package]
name = "network-metrics"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Measure network metrics"
repository = "https://github.com/piot/network-metrics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metricator = "0.0.6"
monotonic-time-rs = "0.0.5"
log = "0.4.22"


[features]
default = []
log = []
